@@ -420,9 +420,9 @@ Ihr Benutzerkonto wurde eingerichtet. Vergessen Sie nicht, Ihre Einstellungen an
 'createaccountmail'	=> 'über E-Mail',
 "badretype"		=> "Die beiden Passwörter stimmen nicht überein.",
 "userexists"	=> "Dieser Benutzername ist schon vergeben. Bitte wählen Sie einen anderen.",
-'youremail'		=> 'Ihre E-Mail-Adresse**',
+'youremail'		=> 'Ihre E-Mail-Adresse**:',
 "yournick"		=> 'Ihr Spitzname (zum Unterschreiben):',
-'yourrealname'		=> 'Ihr echter Name*',
+'yourrealname'		=> 'Ihr echter Name*:',
 'yourlanguage'		=> 'Sprache der Benutzeroberfläche:',
 'username'		=> 'Benutzername:',
 'uid'			=> 'Benutzer ID:',
