@@ -684,10 +684,10 @@ Your account has been created. Don't forget to change your {{SITENAME}} preferen
 'createaccountmail'	=> 'by e-mail',
 'badretype'		=> 'The passwords you entered do not match.',
 'userexists'	=> 'Username entered already in use. Please choose a different name.',
-'youremail'		=> 'E-mail *',
+'youremail'		=> 'E-mail *:',
 'username'		=> 'Username:',
 'uid'			=> 'User ID:',
-'yourrealname'		=> 'Real name *',
+'yourrealname'		=> 'Real name *:',
 'yourlanguage'	=> 'Language:',
 'yourvariant'  => 'Variant',
 'yournick'		=> 'Nickname:',
